2004-03-08 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added "ga" (Irish) to ALL_LINGUAS.

2004-03-07  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr@ije" to ALL_LINGUAS.

2003-03-07  Hans Breuer  <hans@breuer.org>

	* glib/gspawn-win32.c : (GPid)shortcut_spawn_retval which
	doesn't improve the implementation at all, it just make it 
	compile with msvc ...

	* glib/makefile.msc.in : build gatomic.c (now really:)
	
2004-03-06  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Update.

	* configure.in
	* Makefile.am
	* */Makefile.am: Drop the hand-written makefile.mingw(.in)
	files. They haven't been maintained in a long time. As several
	people have managed to build GLib for Win32 using the
	autoconfiscation mechanism, there is no real reason to even try to
	maintain the hand-written mingw makefiles.

2004-03-05  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/gatomic.c: Fix infinite recursion for
	G_MEMORY_BARRIER_NEEDED and DEFINE_WITH_MUTEXES by using a GMutex
	instead of G_DEFINE_LOCK. The mutex is allocated by the new
	function _g_atomic_thread_init. Fixes #136284.

	* glib/gthreadinit.h, glib/gthread.c: Declare and call
	_g_atomic_thread_init during thread system initialization.
 
2004-03-05  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Add g_main_depth. (#136221, Cedric Gustin)

2004-03-04  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-04  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gmain.c: Use the atomic integer operations for GMainContext
	and GMainLoop reference counting.

	* glib/gmain.c: Hold the main_context_list lock, when iterating
	the list. Only call g_main_context_wakeup for positive reference
	count.

2004-03-03  Tor Lillqvist  <tml@iki.fi>

	* glibconfig.h.win32.in: Update to match a configure-generated
	glibconfig.h. Specifically: Remove G_{MIN,MAX,MAXU}INT64
	definitions (now in gtypes.h). Remove g_once and